<!--
   Copyright (C) 2014 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Grid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

   <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Position1" />

            <TextView
                android:id="@+id/poseX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Position2" />

            <TextView
                android:id="@+id/poseY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Position3" />

            <TextView
                android:id="@+id/poseZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Quaternion1" />

            <TextView
                android:id="@+id/Quaternion1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Quaternion2" />

            <TextView
                android:id="@+id/Quaternion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Quaternion3" />

            <TextView
                android:id="@+id/Quaternion3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Quaternion4" />

            <TextView
                android:id="@+id/Quaternion4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Status" />

            <TextView
                android:id="@+id/Status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        
          <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Version" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        

        
    </LinearLayout>
	<RelativeLayout 
	    android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_gravity="fill_horizontal"
        android:layout_weight="5">
		
	     <android.opengl.GLSurfaceView
        	android:id="@+id/gl_surface_view"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	 />

	     <ToggleButton
	         android:id="@+id/autoReset"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_alignParentLeft="true"
	         android:layout_alignParentTop="true"
	         android:textOff="Auto Reset Off"
	         android:textOn="Auto Reset On" />

	     <Button
	         android:id="@+id/start"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_alignParentLeft="true"
	         android:layout_below="@+id/autoReset"
	         android:text="Start" />

	     <Button
	         android:id="@+id/manualReset"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_alignParentLeft="true"
	         android:layout_below="@+id/start"
	         android:text="ResetMotion Tracking" />

	     <Button
	         android:id="@+id/thirdPerson"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_alignParentBottom="true"
	         android:layout_alignParentLeft="true"
	         android:text="Third" />

	     <Button
	         android:id="@+id/firstPerson"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_alignParentBottom="true"
	         android:layout_toRightOf="@+id/thirdPerson"
	         android:text="First" />

	     <Button
	         android:id="@+id/topDown"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_alignParentBottom="true"
	         android:layout_toRightOf="@+id/firstPerson"
	         android:text="Top Down" />
	    
	</RelativeLayout>
   

</LinearLayout>